--- a/connororton.html
+++ b/connororton.html
@@ -40,9 +40,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a><a class="btn btn-primary btn-block btn-lg" href="https://github.com/connor1994">GitHub Portfolio</a></div>
-        <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a><a class="btn btn-primary btn-block btn-lg" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
-        <div class="col-md-4 pb-2"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a><a class="btn btn-primary btn-block btn-lg" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
+        <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a><a class="btn btn-block btn-lg btn-dark" href="https://github.com/connor1994">GitHub Portfolio</a></div>
+        <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a><a class="btn btn-block btn-lg btn-dark" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+        <div class="col-md-4 pb-2"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a><a class="btn btn-block btn-lg btn-dark" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
       </div>
     </div>
   </div>
