--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
                 <div class="row">
                   <div class="col-md-12" style="">
-                    <h2 class="bg-secondary text-centerpx-md-5 text-center"><b class="text-center">Connor Orton BSc</b><br></h2>
-                    <h5 class="bg-secondary text-center py-2">Games Programmer &amp; Designer</h5>
+                    <h2 class="text-centerpx-md-5 text-center bg-dark"><b class="text-center">Connor Orton BSc</b><br></h2>
+                    <h5 class="text-center py-2 bg-dark">Games Programmer &amp; Designer</h5>
                   </div>
                 </div>
-                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn my-2 btn-block btn-secondary" href="connororton.html" style="">Portfolio &amp; CV</a>
+                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn my-2 btn-block btn-dark" href="connororton.html" style="">Portfolio &amp; CV</a>
               </div>
               <div class="col-12 col-lg-6" style="">
                 <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
                 <div class="row">
                   <div class="col-md-12">
-                    <h2 class="bg-secondary text-center">Natalie Smith</h2>
-                    <h5 class="bg-secondary text-center py-2">2D Digital Artist</h5>
+                    <h2 class="text-center bg-dark">Natalie Smith<br></h2>
+                    <h5 class="text-center py-2 bg-dark">2D Digital Artist</h5>
                   </div>
                 </div>
-                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and being creative since her first drawing as a child. Her responsibilities include conceptualizing various game ideas and creating art assets using industry standard software alongside being equippped with the most popular top grade hardware. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.&nbsp;</p><a class="btn my-2 btn-block btn-secondary" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
+                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and being creative since her first drawing as a child. Her responsibilities include conceptualizing various game ideas and creating art assets using industry standard software alongside being equippped with the most popular top grade hardware. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.&nbsp;</p><a class="btn my-2 btn-block btn-dark" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
               </div>
             </div>
           </div>
