--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -27,7 +27,7 @@
       </div>
       <div class="row">
         <div style="" class="col-md-12">
-          <h3 class="text-center py-2 bg-dark"><b>Natalie Smith</b><br>Digital Artist &amp; Craftswoman</h3>
+          <h3 class="text-center bg-dark p-2"><b>Natalie Smith</b><br>Digital Artist &amp; Craftswoman</h3>
           <div class="row">
             <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
             <div class="col-md-12">
@@ -38,14 +38,14 @@
       <div class="row">
         <div class="col-md-12">
           <div class="row px-2">
-            <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white btn-lg d-flex justify-content-center my-2 btn-block" href="https://www.linkedin.com/in/natsmith1219" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white d-flex justify-content-center btn-lg my-2 btn-block" href="https://twitter.com/natsmith1219" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2 p-2" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white btn-lg d-flex justify-content-center my-2 btn-block p-2" href="https://www.linkedin.com/in/natsmith1219" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white d-flex justify-content-center btn-lg my-2 btn-block p-2" href="https://twitter.com/natsmith1219" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
           <div class="row px-2">
-            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2" href="https://www.deviantart.com/foxydj">Deviant Art Portfolio<br></a></div>
-            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2" href="assets/CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
-            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2" href="https://www.pinterest.co.uk/natsmith1219"><i class="fa fa-fw fa-pinterest-p"></i>Crafts Portfolio</a></div>
+            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://www.deviantart.com/foxydj">Deviant Art Portfolio<br></a></div>
+            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="assets/CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://www.pinterest.co.uk/natsmith1219"><i class="fa fa-fw fa-pinterest-p"></i>Crafts Portfolio</a></div>
           </div>
         </div>
       </div>
@@ -55,7 +55,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center py-3 bg-dark mt-2"><b>Games Art Portfolio</b></h1>
+          <h1 class="text-center bg-dark mt-2 py-3 p-2"><b>Games Art Portfolio</b></h1>
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
+          <h3 class="text-center bg-secondary p-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
           <p class="text-left p-2 bg-primary">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors. My responsibility is to develop all of the various 2D sprites to import into the project such as control scheme icon, in-game maps, item icon sprites and more.&nbsp;All sprites are work in progress whilst the game is in development. All sprites were made in Aseprite and exported as a png.<br><br>Below is a video of the game in its current state. It is in early development and most art isn't final until release.</p>
         </div>
       </div>
@@ -72,7 +72,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h4 class="text-center py-2 bg-secondary"><b>Item Icons</b></h4>
+          <h4 class="text-center bg-secondary py-2 p-2"><b>Item Icons</b></h4>
         </div>
       </div>
       <div class="row pb-3">
@@ -107,7 +107,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h4 class="text-center py-2 bg-secondary mt-2"><b>Crafting Stations</b></h4>
+          <h4 class="text-center bg-secondary mt-2 p-2"><b>Crafting Stations</b></h4>
         </div>
       </div>
       <div class="row pb-3">
@@ -130,7 +130,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h4 class="text-center py-2 bg-secondary"><b>Placeholder Character&nbsp;</b></h4>
+          <h4 class="text-center bg-secondary p-2"><b>Placeholder Character&nbsp;</b></h4>
         </div>
       </div>
       <div class="row pb-3">
@@ -140,7 +140,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h4 class="text-center py-2 bg-secondary"><b>Control Schemes</b></h4>
+          <h4 class="text-center bg-secondary p-2"><b>Control Schemes</b></h4>
         </div>
       </div>
       <div class="row pb-3">
@@ -153,7 +153,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h4 class="text-center py-2 bg-secondary"><b>User Interface</b></h4>
+          <h4 class="text-center bg-secondary p-2"><b>User Interface</b></h4>
         </div>
       </div>
       <div class="row">
@@ -174,7 +174,7 @@
       <div class="col-md-12">
         <div class="row">
           <div class="col-md-12 mt-2">
-            <h3 class="text-center bg-secondary py-2"><b>Development Update Video</b></h3>
+            <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
           </div>
         </div>
         <div class="row">
@@ -191,7 +191,7 @@
         <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
           <div class="row">
             <div class="col-md-12" style="">
-              <h3 class="text-center py-2 bg-secondary mt-2" style=""><b>Pixel Pinball Arcade - Unity, C# (2020)</b></h3>
+              <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>Pixel Pinball Arcade - Unity, C# (2020)</b></h3>
               <p class="text-left p-3 bg-primary">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
             </div>
           </div>
@@ -199,12 +199,12 @@
         <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
           <div class="row">
             <div class="col-md-4 mb-2"></div>
-            <div class="col-md-4 mb-2"><a class="btn btn-block btn-lg btn-success d-flex justify-content-center" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>&nbsp;Pixel Pinball Arcade</a></div>
+            <div class="col-md-4 mb-2"><a class="btn btn-block btn-lg d-flex justify-content-center btn-dark" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>&nbsp;Pixel Pinball Arcade</a></div>
             <div class="col-md-4 mb-2"></div>
           </div>
           <div class="row">
             <div class="col-md-12">
-              <h4 class="text-center py-2 bg-secondary"><b>2D Sprites</b></h4>
+              <h4 class="text-center bg-secondary p-2"><b>2D Sprites</b></h4>
               <p class="lead text-left p-3 bg-primary">All sprites were designed and developed by myself taking inspiration from real pinball boards. They were all developed and exported using Aseprite.</p>
             </div>
           </div>
@@ -263,7 +263,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 mt-2 bg-dark">Contact Form</h3>
+          <h3 class="text-center mt-2 bg-dark p-2">Contact Form</h3>
         </div>
       </div>
       <div class="row">
