--- a/connororton.html
+++ b/connororton.html
@@ -27,7 +27,7 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center py-2 bg-dark"><b class="">Connor Orton BSc</b><br>Games Programmer &amp; Designer</h3>
+          <h3 class="text-center bg-dark p-2"><b class="">Connor Orton BSc</b><br>Games Programmer &amp; Designer</h3>
         </div>
       </div>
       <div class="row">
@@ -40,14 +40,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
-        <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
-        <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+        <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2 p-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+        <div class="col-md-4"><a class="btn text-white btn-lg d-flex justify-content-center my-2 p-2" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+        <div class="col-md-4"><a class="btn text-white d-flex justify-content-center btn-lg p-2 my-2" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
       </div>
       <div class="row">
-        <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2" href="https://github.com/connor1994">GitHub Portfolio</a></div>
-        <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
-        <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
+        <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://github.com/connor1994">GitHub Portfolio</a></div>
+        <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+        <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-dark mt-2 py-2" style=""><b>Games Programming Portfolio</b></h1>
+          <h1 class="text-center bg-dark mt-2 p-2" style=""><b>Games Programming Portfolio</b></h1>
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary py-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
+          <h3 class="text-center bg-secondary p-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
           <p class="text-left p-2 bg-primary">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><b class="">My main responsibilites are:</b><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.</p>
         </div>
       </div>
@@ -72,7 +72,7 @@
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-12">
-              <h3 class="text-center py-2 bg-secondary"><b>Development Update Video</b></h3>
+              <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
             </div>
           </div>
         </div>
@@ -91,18 +91,18 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary mt-2" style=""><b> Pixel Pinball Arcade - Unity, C# (2020)</b></h3>
+          <h3 class="text-center bg-secondary mt-2 p-2" style=""><b> Pixel Pinball Arcade - Unity, C# (2020)</b></h3>
           <p class="p-2 text-left bg-primary">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two.<br><br><b>My main responsibilities were:&nbsp;<br></b>- Designing the various game concepts which examples include gameplay systems and user interface&nbsp;<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p>
         </div>
       </div>
       <div class="row mx-auto pb-2">
         <div class="col-md-4"></div>
-        <div class="col-md-4"><a class="btn btn-lg active btn-block btn-success py-2 my-2" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Pixel Pinball Arcade</a></div>
+        <div class="col-md-4"><a class="btn btn-lg active btn-block py-2 my-2 btn-dark" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Pixel Pinball Arcade</a></div>
         <div class="col-md-4"></div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary"><b class="">Gameplay Video</b></h3>
+          <h3 class="text-center bg-secondary p-2"><b class="">Gameplay Video</b></h3>
         </div>
       </div>
       <div class="row">
@@ -119,13 +119,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary mt-2" style=""><b>RPG Mechanics Asset Pack - UE4 BP (2017)</b></h3>
+          <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>RPG Mechanics Asset Pack - UE4 BP (2017)</b></h3>
           <p class="p-2 text-left bg-primary">Battle Beasts RPG Mechanics asset pack is a collection of RPG mechanics that was developed using Unreal Engine 4 with blueprint visual scripting. It was created as part as my programming module on my BSC Games Production undergraduate degree. The game mechanics included are inspired by the Pokemon game franchise. The main mechanics and systems the asset pack includes are:<br><br>- <b>Combat system</b> (Control your beasts against your opponent, use abilities and items to defeat them, features battles against npcs and random encounters.)<br>- <b>Dialogue system</b> (Features multi choice questions and multiple outcomes depending on dialogue choice.)<br>- <b>In-Game database system</b> (For showing the player what beasts exist in the game and if they have captured them)<br>- <b>Engine System databases</b> (To manage units, unit abilities, items etc.)<br>- <b>Shop system</b> (Combined with the dialogue system to allow the player to purchase items using currency from a merchant.)<br>- <b>Bank system</b> (Combined with the dialogue system to store player beasts in a unit storage)<br>- <b>Trade system</b> (Combined with the dialogue system to trade player beasts with NPCs.)<br>-&nbsp;<b>Utility menu</b> (To allow the player to access in-game database, beast team, inventory and options for game preferences.)<br>- <b>Player unit progression</b> (Beasts level up and learn new abilities depending on their level.)</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary"><b>Preview Video</b></h3>
+          <h3 class="text-center bg-secondary p-2"><b>Preview Video</b></h3>
         </div>
       </div>
       <div class="row">
@@ -142,13 +142,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary mt-2" style=""><b>Survival Training VR Simulation - UE4 BP (2017)</b></h3>
+          <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>Survival Training VR Simulation - UE4 BP (2017)</b></h3>
           <p class="p-2 text-left bg-primary" style="">Survival Training VR is a virtual reality simulator demo was developed in Unreal Engine 4 with Unreal Blueprint as part as my BSC games production dissertation project where the intention was collating data on if the user can learn survival skills in virtual reality. After completing all tasks the player was informed how they did on the quiz to let them know if they learned from the simulation.<br></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary"><b>Preview Video</b></h3>
+          <h3 class="text-center bg-secondary p-2"><b>Preview Video</b></h3>
         </div>
       </div>
       <div class="row">
@@ -165,13 +165,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary mt-2" style=""><b>Isolation Complex - UE4 BP (2017)</b></h3>
+          <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>Isolation Complex - UE4 BP (2017)</b></h3>
           <p class="p-2 text-left bg-primary">Isolation complex is a short first person puzzle game demo developed in Unreal Engine 4 using Unreal Blueprint, it was created as part of my BSC Games Production as my dissertation project to collate data to see if players could play a game and solve puzzles under specific conditions I.E under a certain time, before I changed the idea topic. It features adventure and puzzle game elements where the player must solve a variety of logic puzzles to escape the room.<br></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary"><b>Gameplay Video</b></h3>
+          <h3 class="text-center bg-secondary p-2"><b>Gameplay Video</b></h3>
         </div>
       </div>
       <div class="row">
@@ -188,13 +188,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary mt-2" style=""><b>Once Upon a Castle - UE4 BP (2015)</b></h3>
+          <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>Once Upon a Castle - UE4 BP (2015)</b></h3>
           <p class="p-2 text-left bg-primary" style="">Once Upon a Castle is a tower defense game demo that was developed in Unreal Engine 4 using Unreal Blueprint visual scripting as part as my Foundation Degree. It features real time player combat with enemy waves which damage player defenses, resource gathering, tower building which featured the base and the weapon selections and more.<br></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary"><b>Gameplay Video</b></h3>
+          <h3 class="text-center bg-secondary p-2"><b>Gameplay Video</b></h3>
         </div>
       </div>
       <div class="row">
@@ -211,13 +211,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary mt-2" style=""><b>Dash and Stack - Unity, C# (2015)</b></h3>
+          <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>Dash and Stack - Unity, C# (2015)</b></h3>
           <p class="p-2 text-left bg-primary" style="">Dash and Stack is a complete android game developed in Unity and written in C# designed for older android phones. I developed this project with a friend and it was placed on the google play store for free. I was responsible for designing the game and game modes. I implemented the user interface, audio and writ the menu systems whilst my partner writ the gameplay scripts.<br></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary" contenteditable="true"><b>Gameplay Video</b></h3>
+          <h3 class="text-center bg-secondary p-2" contenteditable="true"><b>Gameplay Video</b></h3>
         </div>
       </div>
       <div class="row">
@@ -234,13 +234,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary mt-2" style=""><b>I Am Alone - Ren'Py, Python (2015)</b></h3>
+          <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>I Am Alone - Ren'Py, Python (2015)</b></h3>
           <p class="p-2 text-left bg-primary" style="">I Am Alone is a visual novel demo was developed in the Ren'Py engine as part as my level 3 extended diploma. Written in the python programming language. It has puzzle elements with a horror narrative feel where the player has to explore a mysterious underground facility solving various puzzles to find answers of who called them there.<br></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary"><b>Gameplay Video</b></h3>
+          <h3 class="text-center bg-secondary p-2"><b>Gameplay Video</b></h3>
         </div>
       </div>
       <div class="row">
@@ -257,9 +257,9 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center py-2 bg-secondary mt-2" style=""><b>Operation Health - Game Maker, GML (2012)</b></h3>
+          <h3 class="text-center bg-secondary mt-2 p-2" style=""><b>Operation Health - Game Maker, GML (2012)</b></h3>
           <p class="p-2 text-left bg-primary" style="">Operation Health is a 2D platformer demo that was developed using Game Maker written in GML as part of my level 2 creative media course as we were tasked to great a game with the topic of healthy living. It was used as my final major project during my level 2 creative technologies course. It features action platformer elements with a comedic narrative. The player must progress through the level whilst shooting and defeating enemies until they reach the end of the game.</p>
-          <h3 class="text-center py-2 bg-secondary"><b>Gameplay Video</b></h3>
+          <h3 class="text-center bg-secondary p-2"><b>Gameplay Video</b></h3>
         </div>
       </div>
       <div class="row">
@@ -280,7 +280,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center py-2 mt-2 bg-dark">Contact Form</h3>
+          <h3 class="text-center mt-2 bg-dark p-2">Contact Form</h3>
         </div>
       </div>
       <div class="row">
