--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row pb-0 pt-2" style="">
         <div class="col-md-12 col-lg-12">
-          <h2 class="text-center py-2 bg-dark">About Us</h2>
+          <h2 class="text-center bg-dark p-2">About Us</h2>
           <p style="" class="my-2 bg-primary text-left lead p-2">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
-          <h2 class="text-center py-2 bg-dark">The Team</h2>
+          <h2 class="text-center bg-dark p-2">The Team</h2>
           <div class="col-md-12">
             <div class="row">
               <div class="col-12 col-lg-6" style=""> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="350
@@ -40,21 +40,21 @@
 350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
                 <div class="row">
                   <div class="col-md-12" style="">
-                    <h2 class="text-centerpx-md-5 text-center bg-dark"><b class="text-center">Connor Orton BSc</b><br></h2>
-                    <h5 class="text-center py-2 bg-dark">Games Programmer &amp; Designer</h5>
+                    <h2 class="text-centerpx-md-5 text-center bg-dark p-2"><b class="text-center">Connor Orton BSc</b><br></h2>
+                    <h5 class="text-center bg-dark p-2">Games Programmer &amp; Designer</h5>
                   </div>
                 </div>
-                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn my-2 btn-block btn-dark" href="connororton.html" style="">Portfolio &amp; CV</a>
+                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker XP to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn my-2 btn-block btn-dark p-2" href="connororton.html" style="">Portfolio &amp; CV</a>
               </div>
               <div class="col-12 col-lg-6" style="">
                 <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
                 <div class="row">
                   <div class="col-md-12">
-                    <h2 class="text-center bg-dark">Natalie Smith<br></h2>
-                    <h5 class="text-center py-2 bg-dark">2D Digital Artist</h5>
+                    <h2 class="text-center bg-dark p-2">Natalie Smith<br></h2>
+                    <h5 class="text-center bg-dark p-2">2D Digital Artist</h5>
                   </div>
                 </div>
-                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and being creative since her first drawing as a child. Her responsibilities include conceptualizing various game ideas and creating art assets using industry standard software alongside being equippped with the most popular top grade hardware. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.&nbsp;</p><a class="btn my-2 btn-block btn-dark" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
+                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and being creative since her first drawing as a child. Her responsibilities include conceptualizing various game ideas and creating art assets using industry standard software alongside being equippped with the most popular top grade hardware. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.&nbsp;</p><a class="btn my-2 btn-block btn-dark p-2" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center py-2 bg-dark my-2" style="">Game Projects</h1>
+          <h1 class="text-center bg-dark my-2 p-2" style="">Game Projects</h1>
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center py-2 bg-secondary">Pixel Pinball Arcade</h3>
+          <h3 class="text-center bg-secondary py-2 p-2">Pixel Pinball Arcade</h3>
         </div>
       </div>
       <div class="row">
@@ -91,7 +91,7 @@
           <p class="mb-0 py-2 px-2 text-left bg-primary">Pixel Pinball Arcade is a 2D pixel art pinball game for Android developed in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Designer, Games Programmer)<br>- Natalie Smith (2D Digital Artist)</p>
           <div class="row">
             <div class="col-md-4"></div>
-            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>&nbsp;Pixel Pinball Arcade</a></div>
+            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>&nbsp;Pixel Pinball Arcade</a></div>
             <div class="col-md-4"></div>
           </div>
         </div>
@@ -100,7 +100,7 @@
         <div class="col-md-12 pb-2">
           <div class="row">
             <div class="col-md-12 mt-2">
-              <h3 class="text-center py-2 bg-secondary"><b>Gameplay Video</b></h3>
+              <h3 class="text-center bg-secondary p-2"><b>Gameplay Video</b></h3>
             </div>
           </div>
           <div class="embed-responsive embed-responsive-16by9">
@@ -124,7 +124,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 mt-2">
-          <h3 class="text-center py-2 bg-secondary"><b>Development Update Video</b></h3>
+          <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
         </div>
       </div>
       <div class="row">
