--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="wireframe.css">
 </head>
 
-<body class="bg-primary mx-auto" style="	background-position: top left;	background-size: 100%;	background-repeat: repeat;	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);">
+<body class="bg-primary mx-0" style="	background-position: top left;	background-size: 100%;	background-repeat: repeat;	background-image: url(assets/FineChapGames/FCG_Wallpaper.jpg);">
   <div class="" style="	background-image: linear-gradient(to bottom, black, black);	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     <div class="container">
       <div class="row">
