--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row pb-0 pt-2" style="">
         <div class="col-md-12 col-lg-12">
-          <h2 class="text-center bg-dark p-2">About Us</h2>
+          <h2 class="bg-dark text-center display-4 mt-2 p-2">About Us</h2>
           <p style="" class="my-2 bg-primary text-left lead p-2">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
-          <h2 class="text-center bg-dark p-2">The Team</h2>
+          <h2 class="bg-dark text-center display-4 mt-2 p-2">The Team</h2>
           <div class="col-md-12">
             <div class="row">
               <div class="col-12 col-lg-6" style=""> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="350
@@ -40,7 +40,7 @@
 350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
                 <div class="row">
                   <div class="col-md-12" style="">
-                    <h2 class="text-centerpx-md-5 text-center bg-dark p-2"><b class="text-center">Connor Orton BSc</b><br></h2>
+                    <h2 class="bg-dark text-center display-4 mt-2 p-2"><b class="text-center">Connor Orton BSc</b><br></h2>
                     <h5 class="text-center bg-dark p-2">Games Programmer &amp; Designer</h5>
                   </div>
                 </div>
@@ -50,8 +50,8 @@
                 <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
                 <div class="row">
                   <div class="col-md-12">
-                    <h2 class="text-center bg-dark p-2">Natalie Smith<br></h2>
-                    <h5 class="text-center bg-dark p-2">2D Digital Artist</h5>
+                    <h2 class="bg-dark text-center display-4 mt-2 p-2">Natalie Smith<br></h2>
+                    <h5 class="text-center bg-dark p-2">2D Digital Artist &amp; Craftswoman</h5>
                   </div>
                 </div>
                 <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and being creative since her first drawing as a child. Her responsibilities include conceptualizing various game ideas and creating art assets using industry standard software alongside being equippped with the most popular top grade hardware. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.&nbsp;</p><a class="btn my-2 btn-block btn-dark p-2" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
@@ -74,7 +74,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-dark my-2 p-2" style="">Game Projects</h1>
+          <h1 class="bg-dark text-center display-4 mt-2 p-2" style="">Game Projects</h1>
         </div>
       </div>
     </div>
