--- a/connororton.html
+++ b/connororton.html
@@ -27,7 +27,7 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="text-center bg-dark p-2"><b class="">Connor Orton BSc</b><br>Games Programmer &amp; Designer</h3>
+          <h3 class="bg-dark text-center display-4 mt-2 p-2"><b class="">Connor Orton BSc</b><br>Games Programmer &amp; Designer</h3>
         </div>
       </div>
       <div class="row">
@@ -55,7 +55,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center bg-dark mt-2 p-2" style=""><b>Games Programming Portfolio</b></h1>
+          <h3 class="bg-dark text-center display-4 mt-2 p-2" style=""><b>Games Programming Portfolio</b></h3>
         </div>
       </div>
     </div>
@@ -280,7 +280,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center mt-2 bg-dark p-2">Contact Form</h3>
+          <h3 class="bg-dark text-center display-4 mt-2 p-2">Contact Form</h3>
         </div>
       </div>
       <div class="row">
