--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -27,7 +27,8 @@
       </div>
       <div class="row">
         <div style="" class="col-md-12">
-          <h3 class="bg-dark text-center display-4 mt-2 p-2"><b>Natalie Smith</b><br>Digital Artist &amp; Craftswoman</h3>
+          <h3 class="bg-dark text-center display-4 mt-2 p-3"><b>Natalie Smith</b><br></h3>
+          <h4 class="text-center bg-dark p-2">Digital Artist &amp; Craftswoman</h4>
           <div class="row">
             <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
             <div class="col-md-12">
@@ -55,7 +56,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="bg-dark text-center display-4 mt-2 p-2"><b>Games Art Portfolio</b></h1>
+          <h1 class="bg-dark text-center display-4 mt-2 p-3"><b>Games Art Portfolio</b></h1>
         </div>
       </div>
     </div>
@@ -263,7 +264,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center mt-2 bg-dark p-2">Contact Form</h3>
+          <h3 class="bg-dark text-center display-4 mt-2 p-3">Contact Form</h3>
         </div>
       </div>
       <div class="row">
