--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -21,13 +21,13 @@
   <div class="mb-4" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border my-2 mx-auto" src="assets/Portrait/Natalie_Smith.jpg" height="300" width="300
+        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2" src="assets/Portrait/Natalie_Smith.jpg" height="300" width="300
 400
 50"></div>
       </div>
       <div class="row">
         <div style="" class="col-md-12">
-          <h3 class="bg-dark text-center display-4 mt-2 p-3"><b>Natalie Smith</b><br></h3>
+          <h3 class="bg-dark text-center mt-2 display-4 p-2 px-3"><b>Natalie Smith</b><br></h3>
           <h4 class="text-center bg-dark p-2">Digital Artist &amp; Craftswoman</h4>
           <div class="row">
             <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
@@ -38,12 +38,12 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="row px-2">
-            <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2 p-2" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white btn-lg d-flex justify-content-center my-2 btn-block p-2" href="https://www.linkedin.com/in/natsmith1219" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white d-flex justify-content-center btn-lg my-2 btn-block p-2" href="https://twitter.com/natsmith1219" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+          <div class="row">
+            <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://www.linkedin.com/in/natsmith1219" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://twitter.com/natsmith1219" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
-          <div class="row px-2">
+          <div class="row">
             <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://www.deviantart.com/foxydj">Deviant Art Portfolio<br></a></div>
             <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="assets/CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
             <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://www.pinterest.co.uk/natsmith1219"><i class="fa fa-fw fa-pinterest-p"></i>Crafts Portfolio</a></div>
@@ -56,7 +56,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="bg-dark text-center display-4 mt-2 p-3"><b>Games Art Portfolio</b></h1>
+          <h1 class="bg-dark text-center mt-2 display-4 p-2 px-3"><b>Games Art Portfolio</b></h1>
         </div>
       </div>
     </div>
@@ -264,7 +264,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 mt-2 p-3">Contact Form</h3>
+          <h3 class="bg-dark text-center mt-2 display-4 p-2 px-3">Contact Form</h3>
         </div>
       </div>
       <div class="row">
