--- a/connororton.html
+++ b/connororton.html
@@ -21,13 +21,13 @@
   <div class="mb-4" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border my-2 mx-auto" src="assets/Portrait/Connor_Orton.jpg" height="300" width="300
+        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2" src="assets/Portrait/Connor_Orton.jpg" height="300" width="300
 400
 50"></div>
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="bg-dark text-center display-4 mt-2 p-3"><b class="">Connor Orton BSc</b><br></h3>
+          <h3 class="bg-dark text-center mt-2 display-4 p-2 px-3"><b class="">Connor Orton BSc</b><br></h3>
           <h4 class="text-center bg-dark p-2">Games Programmer &amp; Designer</h4>
         </div>
       </div>
@@ -41,9 +41,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2 p-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
-        <div class="col-md-4"><a class="btn text-white btn-lg d-flex justify-content-center my-2 p-2" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
-        <div class="col-md-4"><a class="btn text-white d-flex justify-content-center btn-lg p-2 my-2" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+        <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+        <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+        <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
       </div>
       <div class="row">
         <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://github.com/connor1994">GitHub Portfolio</a></div>
@@ -56,7 +56,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 mt-2 p-3" style=""><b class="text-center">Games Programming Portfolio</b></h3>
+          <h3 class="bg-dark text-center mt-2 display-4 p-2 px-4" style=""><b class="text-center">Games Programming Portfolio</b></h3>
         </div>
       </div>
     </div>
@@ -281,7 +281,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 mt-2 p-3">Contact Form</h3>
+          <h3 class="bg-dark text-center mt-2 display-4 p-2 px-3">Contact Form</h3>
         </div>
       </div>
       <div class="row">
