--- a/connororton.html
+++ b/connororton.html
@@ -56,7 +56,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center mt-2 display-4 p-2 px-4" style=""><b class="text-center">Games Programming Portfolio</b></h3>
+          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Games Programming Portfolio</b></h3>
         </div>
       </div>
     </div>
