--- a/connororton.html
+++ b/connororton.html
@@ -27,7 +27,7 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <h3 class="bg-dark text-center mt-2 display-4 p-2 px-3"><b class="">Connor Orton BSc</b><br></h3>
+          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto"><b class="">Connor Orton BSc</b><br></h3>
           <h4 class="text-center bg-dark p-2">Games Programmer &amp; Designer</h4>
         </div>
       </div>
@@ -281,7 +281,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center mt-2 display-4 p-2 px-3">Contact Form</h3>
+          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto">Contact Form</h3>
         </div>
       </div>
       <div class="row">
