--- a/connororton.html
+++ b/connororton.html
@@ -26,9 +26,9 @@
 50"></div>
       </div>
       <div class="row">
-        <div class="col-md-12" style="">
-          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto"><b class="">Connor Orton BSc</b><br></h3>
-          <h4 class="text-center bg-dark p-2">Games Programmer &amp; Designer</h4>
+        <div class="col-md-12 pt-2" style="">
+          <h3 class="text-center bg-dark p-2"><b class="">Connor Orton BSc</b><br></h3>
+          <h5 class="text-center bg-dark p-2">Games Programmer &amp; Designer</h5>
         </div>
       </div>
       <div class="row">
