--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <p class="mb-0 py-2 px-2 text-left bg-primary">Pixel Pinball Arcade is a 2D pixel art pinball game for Android developed in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Designer, Games Programmer)<br>- Natalie Smith (2D Digital Artist)</p>
           <div class="row">
             <div class="col-md-4"></div>
-            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>&nbsp;Pixel Pinball Arcade</a></div>
+            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>&nbsp;Pixel Pinball Arcade</a></div>
             <div class="col-md-4"></div>
           </div>
         </div>
