--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -19,7 +19,7 @@
       </a> </div>
   </nav>
   <div class="mb-4" style="">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+    <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border mx-auto mt-2" src="assets/Portrait/Natalie_Smith.jpg" height="300" width="300
 400
@@ -39,14 +39,14 @@
       <div class="row">
         <div class="col-md-12">
           <div class="row">
-            <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://www.linkedin.com/in/natsmith1219" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
-            <div class="col-md-4"><a class="btn text-white btn-lg btn-block my-2 p-2" href="https://twitter.com/natsmith1219" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://www.linkedin.com/in/natsmith1219" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://twitter.com/natsmith1219" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
           <div class="row">
-            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://www.deviantart.com/foxydj">Deviant Art Portfolio<br></a></div>
-            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="assets/CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
-            <div class="col-md-4"><a class="btn btn-block btn-lg btn-dark my-2 p-2" href="https://www.pinterest.co.uk/natsmith1219"><i class="fa fa-fw fa-pinterest-p"></i>Crafts Portfolio</a></div>
+            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://www.deviantart.com/foxydj">Deviant Art Portfolio<br></a></div>
+            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="assets/CV/Natalie Smith CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4"><a class="btn btn-block mt-2 text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center" href="https://www.pinterest.co.uk/natsmith1219"><i class="fa fa-fw fa-pinterest-p"></i>Crafts Portfolio</a></div>
           </div>
         </div>
       </div>
